gokquery/KQueryParser.py
# Generated from KQuery.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class KQueryParser ( Parser ):

    grammarFileName = "KQuery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'0b'", "'0o'", "'w'", "'0x'", 
                     "'true'", "'false'", "'query'", "'array'", "'symbolic'", 
                     "':'", "'->'", "'='", "','", "'Not'", "'Shl'", "'LShr'", 
                     "'AShr'", "'Concat'", "'Extract'", "'ZExt'", "'SExt'", 
                     "'Read'", "'Select'", "'Neg'", "'ReadLSB'", "'ReadMSB'", 
                     "'+'", "'-'", "'@'", "'And'", "'Or'", "'Xor'", "'Eq'", 
                     "'Ne'", "'Ult'", "'Ule'", "'Ugt'", "'Uge'", "'Slt'", 
                     "'Sle'", "'Sgt'", "'Sge'", "'Add'", "'Sub'", "'Mul'", 
                     "'UDiv'", "'URem'", "'SDiv'", "'SRem'", "<INVALID>", 
                     "'i'", "'fp'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "Boolean", "SignedConstant", "Constant", 
                      "BinConstant", "OctConstant", "HexConstant", "FloatingPointType", 
                      "IntegerType", "WidthType", "BinId", "OctId", "WIDTH", 
                      "HexId", "TrueMatch", "FalseMatch", "Query", "Array", 
                      "Symbolic", "Colon", "Arrow", "Equal", "COMMA", "NOT", 
                      "SHL", "LSHR", "ASHR", "CONCAT", "EXTRACT", "ZEXT", 
                      "SEXT", "READ", "SELECT", "NEGETION", "READLSB", "READMSB", 
                      "PLUS", "MINUS", "ATR", "BITWISEAND", "BITWISEOR", 
                      "BITWISEXOR", "EQ", "NEQ", "ULT", "ULE", "UGT", "UGE", 
                      "SLT", "SLE", "SGT", "SGE", "ADD", "SUB", "MUL", "UDIV", 
                      "UREM", "SDIV", "SREM", "Identifier", "INT", "FP", 
                      "Whitespace", "Newline", "BlockComment", "LineComment", 
                      "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
                      "LeftBrace", "RightBrace" ]

    RULE_kqueryExpression = 0
    RULE_queryStatements = 1
    RULE_ktranslationUnit = 2
    RULE_queryCommand = 3
    RULE_queryExpr = 4
    RULE_evalExprList = 5
    RULE_evalArrayList = 6
    RULE_expressionList = 7
    RULE_identifierList = 8
    RULE_arrayDeclaration = 9
    RULE_numArrayElements = 10
    RULE_arrayInitializer = 11
    RULE_expression = 12
    RULE_genericBitRead = 13
    RULE_bitExtractExpr = 14
    RULE_version = 15
    RULE_notExpr = 16
    RULE_concatExpr = 17
    RULE_exprNegation = 18
    RULE_selectExpr = 19
    RULE_arrExtractExpr = 20
    RULE_varName = 21
    RULE_leftExpr = 22
    RULE_rightExpr = 23
    RULE_updateList = 24
    RULE_bitwiseExpr = 25
    RULE_comparisonExpr = 26
    RULE_arithmeticExpr = 27
    RULE_domain = 28
    RULE_rangeLimit = 29
    RULE_arrName = 30
    RULE_numberList = 31
    RULE_number = 32
    RULE_constant = 33
    RULE_boolnum = 34
    RULE_signedConstant = 35
    RULE_widthOrSizeExpr = 36

    ruleNames =  [ "kqueryExpression", "queryStatements", "ktranslationUnit", 
                   "queryCommand", "queryExpr", "evalExprList", "evalArrayList", 
                   "expressionList", "identifierList", "arrayDeclaration", 
                   "numArrayElements", "arrayInitializer", "expression", 
                   "genericBitRead", "bitExtractExpr", "version", "notExpr", 
                   "concatExpr", "exprNegation", "selectExpr", "arrExtractExpr", 
                   "varName", "leftExpr", "rightExpr", "updateList", "bitwiseExpr", 
                   "comparisonExpr", "arithmeticExpr", "domain", "rangeLimit", 
                   "arrName", "numberList", "number", "constant", "boolnum", 
                   "signedConstant", "widthOrSizeExpr" ]

    EOF = Token.EOF
    Boolean=1
    SignedConstant=2
    Constant=3
    BinConstant=4
    OctConstant=5
    HexConstant=6
    FloatingPointType=7
    IntegerType=8
    WidthType=9
    BinId=10
    OctId=11
    WIDTH=12
    HexId=13
    TrueMatch=14
    FalseMatch=15
    Query=16
    Array=17
    Symbolic=18
    Colon=19
    Arrow=20
    Equal=21
    COMMA=22
    NOT=23
    SHL=24
    LSHR=25
    ASHR=26
    CONCAT=27
    EXTRACT=28
    ZEXT=29
    SEXT=30
    READ=31
    SELECT=32
    NEGETION=33
    READLSB=34
    READMSB=35
    PLUS=36
    MINUS=37
    ATR=38
    BITWISEAND=39
    BITWISEOR=40
    BITWISEXOR=41
    EQ=42
    NEQ=43
    ULT=44
    ULE=45
    UGT=46
    UGE=47
    SLT=48
    SLE=49
    SGT=50
    SGE=51
    ADD=52
    SUB=53
    MUL=54
    UDIV=55
    UREM=56
    SDIV=57
    SREM=58
    Identifier=59
    INT=60
    FP=61
    Whitespace=62
    Newline=63
    BlockComment=64
    LineComment=65
    LeftParen=66
    RightParen=67
    LeftBracket=68
    RightBracket=69
    LeftBrace=70
    RightBrace=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class KqueryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def queryStatements(self):
            return self.getTypedRuleContext(KQueryParser.QueryStatementsContext,0)


        def EOF(self):
            return self.getToken(KQueryParser.EOF, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_kqueryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKqueryExpression" ):
                listener.enterKqueryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKqueryExpression" ):
                listener.exitKqueryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKqueryExpression" ):
                return visitor.visitKqueryExpression(self)
            else:
                return visitor.visitChildren(self)




    def kqueryExpression(self):

        localctx = KQueryParser.KqueryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_kqueryExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.queryStatements()
            self.state = 75
            self.match(KQueryParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ktranslationUnit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KQueryParser.KtranslationUnitContext)
            else:
                return self.getTypedRuleContext(KQueryParser.KtranslationUnitContext,i)


        def getRuleIndex(self):
            return KQueryParser.RULE_queryStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryStatements" ):
                listener.enterQueryStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryStatements" ):
                listener.exitQueryStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryStatements" ):
                return visitor.visitQueryStatements(self)
            else:
                return visitor.visitChildren(self)




    def queryStatements(self):

        localctx = KQueryParser.QueryStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_queryStatements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KQueryParser.Array or _la==KQueryParser.LeftParen:
                self.state = 77
                self.ktranslationUnit()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KtranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayDeclaration(self):
            return self.getTypedRuleContext(KQueryParser.ArrayDeclarationContext,0)


        def queryCommand(self):
            return self.getTypedRuleContext(KQueryParser.QueryCommandContext,0)


        def getRuleIndex(self):
            return KQueryParser.RULE_ktranslationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKtranslationUnit" ):
                listener.enterKtranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKtranslationUnit" ):
                listener.exitKtranslationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKtranslationUnit" ):
                return visitor.visitKtranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def ktranslationUnit(self):

        localctx = KQueryParser.KtranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ktranslationUnit)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KQueryParser.Array]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.arrayDeclaration()
                pass
            elif token in [KQueryParser.LeftParen]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.queryCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(KQueryParser.LeftParen, 0)

        def Query(self):
            return self.getToken(KQueryParser.Query, 0)

        def evalExprList(self):
            return self.getTypedRuleContext(KQueryParser.EvalExprListContext,0)


        def queryExpr(self):
            return self.getTypedRuleContext(KQueryParser.QueryExprContext,0)


        def RightParen(self):
            return self.getToken(KQueryParser.RightParen, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_queryCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryCommand" ):
                listener.enterQueryCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryCommand" ):
                listener.exitQueryCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryCommand" ):
                return visitor.visitQueryCommand(self)
            else:
                return visitor.visitChildren(self)




    def queryCommand(self):

        localctx = KQueryParser.QueryCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_queryCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(KQueryParser.LeftParen)
            self.state = 88
            self.match(KQueryParser.Query)
            self.state = 89
            self.evalExprList()
            self.state = 90
            self.queryExpr()
            self.state = 91
            self.match(KQueryParser.RightParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KQueryParser.ExpressionContext,0)


        def evalExprList(self):
            return self.getTypedRuleContext(KQueryParser.EvalExprListContext,0)


        def evalArrayList(self):
            return self.getTypedRuleContext(KQueryParser.EvalArrayListContext,0)


        def getRuleIndex(self):
            return KQueryParser.RULE_queryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryExpr" ):
                listener.enterQueryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryExpr" ):
                listener.exitQueryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryExpr" ):
                return visitor.visitQueryExpr(self)
            else:
                return visitor.visitChildren(self)




    def queryExpr(self):

        localctx = KQueryParser.QueryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_queryExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expression()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==KQueryParser.LeftBracket:
                self.state = 94
                self.evalExprList()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KQueryParser.LeftBracket:
                    self.state = 95
                    self.evalArrayList()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvalExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBracket(self):
            return self.getToken(KQueryParser.LeftBracket, 0)

        def expressionList(self):
            return self.getTypedRuleContext(KQueryParser.ExpressionListContext,0)


        def RightBracket(self):
            return self.getToken(KQueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_evalExprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvalExprList" ):
                listener.enterEvalExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvalExprList" ):
                listener.exitEvalExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvalExprList" ):
                return visitor.visitEvalExprList(self)
            else:
                return visitor.visitChildren(self)




    def evalExprList(self):

        localctx = KQueryParser.EvalExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_evalExprList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(KQueryParser.LeftBracket)
            self.state = 101
            self.expressionList()
            self.state = 102
            self.match(KQueryParser.RightBracket)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvalArrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBracket(self):
            return self.getToken(KQueryParser.LeftBracket, 0)

        def identifierList(self):
            return self.getTypedRuleContext(KQueryParser.IdentifierListContext,0)


        def RightBracket(self):
            return self.getToken(KQueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_evalArrayList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvalArrayList" ):
                listener.enterEvalArrayList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvalArrayList" ):
                listener.exitEvalArrayList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvalArrayList" ):
                return visitor.visitEvalArrayList(self)
            else:
                return visitor.visitChildren(self)




    def evalArrayList(self):

        localctx = KQueryParser.EvalArrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_evalArrayList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(KQueryParser.LeftBracket)
            self.state = 105
            self.identifierList()
            self.state = 106
            self.match(KQueryParser.RightBracket)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KQueryParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(KQueryParser.ExpressionContext,i)


        def getRuleIndex(self):
            return KQueryParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = KQueryParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KQueryParser.Boolean) | (1 << KQueryParser.SignedConstant) | (1 << KQueryParser.Constant) | (1 << KQueryParser.Identifier))) != 0) or _la==KQueryParser.LeftParen or _la==KQueryParser.LeftBracket:
                self.state = 108
                self.expression()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(KQueryParser.Identifier)
            else:
                return self.getToken(KQueryParser.Identifier, i)

        def getRuleIndex(self):
            return KQueryParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = KQueryParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KQueryParser.Identifier:
                self.state = 114
                self.match(KQueryParser.Identifier)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Array(self):
            return self.getToken(KQueryParser.Array, 0)

        def arrName(self):
            return self.getTypedRuleContext(KQueryParser.ArrNameContext,0)


        def LeftBracket(self):
            return self.getToken(KQueryParser.LeftBracket, 0)

        def numArrayElements(self):
            return self.getTypedRuleContext(KQueryParser.NumArrayElementsContext,0)


        def RightBracket(self):
            return self.getToken(KQueryParser.RightBracket, 0)

        def Colon(self):
            return self.getToken(KQueryParser.Colon, 0)

        def domain(self):
            return self.getTypedRuleContext(KQueryParser.DomainContext,0)


        def Arrow(self):
            return self.getToken(KQueryParser.Arrow, 0)

        def rangeLimit(self):
            return self.getTypedRuleContext(KQueryParser.RangeLimitContext,0)


        def Equal(self):
            return self.getToken(KQueryParser.Equal, 0)

        def arrayInitializer(self):
            return self.getTypedRuleContext(KQueryParser.ArrayInitializerContext,0)


        def getRuleIndex(self):
            return KQueryParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclaration" ):
                return visitor.visitArrayDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def arrayDeclaration(self):

        localctx = KQueryParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(KQueryParser.Array)
            self.state = 121
            self.arrName()
            self.state = 122
            self.match(KQueryParser.LeftBracket)
            self.state = 123
            self.numArrayElements()
            self.state = 124
            self.match(KQueryParser.RightBracket)
            self.state = 125
            self.match(KQueryParser.Colon)
            self.state = 126
            self.domain()
            self.state = 127
            self.match(KQueryParser.Arrow)
            self.state = 128
            self.rangeLimit()
            self.state = 129
            self.match(KQueryParser.Equal)
            self.state = 130
            self.arrayInitializer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumArrayElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Constant(self):
            return self.getToken(KQueryParser.Constant, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_numArrayElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumArrayElements" ):
                listener.enterNumArrayElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumArrayElements" ):
                listener.exitNumArrayElements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumArrayElements" ):
                return visitor.visitNumArrayElements(self)
            else:
                return visitor.visitChildren(self)




    def numArrayElements(self):

        localctx = KQueryParser.NumArrayElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numArrayElements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(KQueryParser.Constant)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Symbolic(self):
            return self.getToken(KQueryParser.Symbolic, 0)

        def LeftBracket(self):
            return self.getToken(KQueryParser.LeftBracket, 0)

        def numberList(self):
            return self.getTypedRuleContext(KQueryParser.NumberListContext,0)


        def RightBracket(self):
            return self.getToken(KQueryParser.RightBracket, 0)

        def getRuleIndex(self):
            return KQueryParser.RULE_arrayInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitializer" ):
                listener.enterArrayInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitializer" ):
                listener.exitArrayInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInitializer" ):
                return visitor.visitArrayInitializer(self)
            else:
                return visitor.visitChildren(self)




    def arrayInitializer(self):
